# DSA

./: CMakeLists.txt  README.md  main.c
header/: BasicMatrixOperation.h  MatrixAddition.h  MatrixMultiplication.h  MatrixScalarMultiplication.h  Trace.h  substraction.h
sourceFile/: BasicMatrixOperation.c  MatrixAddition.c  MatrixMultiplication.c  MatrixScalarMultiplication.c  Trace.c  substraction.c
